corrected height between comments
height between comments is too small

--- a/app/assets/stylesheets/active_admin/components/_comments.scss
+++ b/app/assets/stylesheets/active_admin/components/_comments.scss
@@ -2,9 +2,9 @@
 .comments {
 
   .active_admin_comment {
-    clear: both;
+    @include clearfix;
     margin-top: 10px;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     max-width: 700px;
 
     .active_admin_comment_meta {
